--- a/practice/frontend/package.json
+++ b/practice/frontend/package.json
@@ -14,7 +14,15 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "react-router-dom": "^5.3.0"
   }
 }
